# research_assistant

./: .codecov.yml  .env.example  MANIFEST.in  Makefile  README.md  TESTING_GUIDE.md  TYPE_CHECKING_GUIDE.md  coverage.toml  environment.yaml  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: CI_CD_DOCUMENTATION.md  README.md  SETUP_GUIDE.md  WORKFLOW_DIAGRAM.md  dependabot.yml  pr.yml  publish-pypi-package.yml  release.yml  security.yml  tests.yml
app/: README.md  __init__.py  gradio_app.py  launch.sh  requirements.txt
config/experiment/: budget_friendly.yaml
config/llm/: local.yaml  openai.yaml
docs/testing/: README.md  comprehensive-guide.md  quality-report.md  readme-template.md
scripts/: check_coverage.py
src/research_assistant/: py.typed
src/research_assistant/config/: __init__.py  config.py  default.yaml
src/research_assistant/config/app/: gradio.yaml
src/research_assistant/config/experiment/: comprehensive.yaml  local_llm.yaml  production.yaml  quick_test.yaml
src/research_assistant/config/llm/: anthropic.yaml  cheap.yaml  openai_gpt4_turbo.yaml
src/research_assistant/config/search/: comprehensive.yaml  default.yaml  minimal.yaml  no_cache.yaml
src/research_assistant/config/topic/: ai_safety.yaml  climate_tech.yaml
src/research_assistant/core/: schemas.py  state.py
src/research_assistant/graphs/: __init__.py  interview_graph.py  research_graph.py
src/research_assistant/nodes/: analyst_nodes.py  interview_nodes.py  report_nodes.py
src/research_assistant/prompts/: __init__.py  analyst_prompts.py  interview_prompts.py  report_prompts.py
src/research_assistant/tools/: __init__.py  search.py
src/research_assistant/type_utils/: __init__.py  protocols.py  validation.py
src/research_assistant/types/: __init__.py  protocols.py  validation.py
src/research_assistant/utils/: __init__.py  exceptions.py  formatting.py  logging.py  retry.py
tests/: conftest.py
tests/integration/: test_graph_execution.py
tests/unit/: test_nodes.py  test_schemas.py
