[project]
name = "research-assistant"
version = "0.1.0"
description = "AI-powered research assistant using LangGraph"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-community>=0.0.20",
    "langgraph>=0.0.20",
    "langchain-tavily>=0.2.12",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "hydra-core>=1.3.0",
    "structlog>=24.0.0",
    "wikipedia>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "vcrpy>=7.0.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-watch>=4.2.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "pre-commit>=3.4.0",
]
ui = [
    "gradio>=4.0.0",
    "streamlit>=1.28.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
