[project]
name = "ai-research-assistant"
version = "0.1.4"
description = "AI-powered research assistant using LangGraph"
readme = "README.md"
authors = [{ name = "Christian Contreras Campana" }]
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-community>=0.0.20",
    "langgraph>=0.0.20",
    "langchain-tavily>=0.2.12",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "hydra-core>=1.3.0",
    "reportlab>=4.4.4",
    "structlog>=24.0.0",
    "wikipedia>=1.4.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-watch>=4.2.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.2.0",
    "types-requests>=2.32.4.20250913",
    "types-PyYAML>=6.0.12.20250915",
    "vcrpy>=7.0.0",

    # Type checking
    "mypy==1.18.2",

    # Linting / formatting
    "flake8==7.3.0",
    "black==25.9.0",
    "isort==7.0.0",
    "ruff==0.14.2",
    "lxml==6.0.2",

    # Pre-commit hooks
    "pre-commit>=3.4.0",
]

ui = [
    "gradio>=5.49.1",
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
namespace_packages = true  # Optional but helps with relatives

[tool.coverage.run]
relative_files = true

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
